# rust-news-service

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/org/news/: main.rs
src/org/news/api/: news.rs
src/org/news/config/: config.rs
src/org/news/request/query/: example.rs
src/org/news/response/: example.rs
src/resources/: log4rs.yml
